can print channel from get request to localhost
Please install this extention( https://chrome.google.com/webstore/detail/allow-control-allow-origi/nlfbmbojpeacfghkpbjhddihlkkiljbi?hl=en) before run it on google chrome, required to test localhost

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,13 @@
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
+    <!-- <ion-list>
+        <ion-item *ngFor="let channel of getChannels()">
+          {{channel.channel_name}}
+        </ion-item>
+    </ion-list> -->
+
+    <!-- <ion-card class="welcome-card">
       <img src="/assets/shapes.svg" alt="" />
       <ion-card-header>
         <ion-card-subtitle>Get Started</ion-card-subtitle>
@@ -19,8 +25,8 @@
       <ion-card-content>
         <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
       </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
+    </ion-card> -->
+    <!-- <ion-list lines="none">
       <ion-list-header>
         <ion-label>Resources</ion-label>
       </ion-list-header>
@@ -40,5 +46,5 @@
         <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
         <ion-label>Theme Your App</ion-label>
       </ion-item>
-    </ion-list>
+    </ion-list> -->
 </ion-content>
